--- a/.lagoon.yml
+++ b/.lagoon.yml
@@ -2,6 +2,14 @@ docker-compose-yaml: docker-compose.yml
 
 project: 'privategpt'
 
+container-registries:
+  github-container-registry:
+    description: "GitHub Container Registry for private packages"
+    username: pmelab
+    password: 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
+    url: ghcr.io
+
+
 tasks:
   post-rollout:
     - run:
